Edit RandomContentGenerator.java